syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.proto";
option java_outer_classname = "AgeProto";

service AgeService {
  rpc CalculateAge (AgeRequest) returns (AgeReply) {
  }
}

message AgeRequest {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
}

message AgeReply {
  int32 message = 1;
}